# rust_unite

onest/fn_prac/: Cargo.toml
onest/fn_prac/src/: main  main.rs
onest/mod_match/: Cargo.toml
onest/mod_match/src/: main  main.rs
onest/process_ctl/: Cargo.toml
onest/process_ctl/src/: main  main.rs
onest/program/httpie/: Cargo.toml
onest/program/httpie/src/: main.rs
onest/scrape_url/: Cargo.toml
onest/scrape_url/src/: main.rs
onest/structure/src/: main  main.rs
onest/test_/src/: main
onest/variables/: Cargo.toml
onest/variables/src/: main  main.rs
