[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.1" #命令行解析
colored = "2" # 命令行彩色处理
jsonxf = "1.1" # json打印格式化
mime = "0.3" # 处理mime类型
reqwest = {version = "0.11",features = ["json"]} # http库
tokio = {version = "1",features = ["full"]} # 异步处理